# GateForge

./: .env.example  .gitignore  AGENT_MODELICA_ACCEPTANCE_NOTE_2026W10.md  AGENT_MODELICA_REALISM_MILESTONE_2026W11.md  CHANGELOG.md  CONTENT_AUTHORIZATION_POLICY.md  DEMO.md  DIRECTORY_GUIDE.md  Dockerfile.okd  LEGAL_NOTICE.md  MVP_CHECKLIST.md  OPERATIONS.md  PUBLIC_REPO_POLICY.md  README.md  WAVE2_REALISM_SMOKE3_RUNBOOK.md  okaydokki.yaml  pyproject.toml  robots.txt
baselines/: index.json  mock_baseline.json  mock_baseline.md  mock_minimal_probe_baseline.json  mock_minimal_probe_baseline.md  openmodelica_medium_probe_baseline.json  openmodelica_medium_probe_baseline.md  openmodelica_minimal_probe_baseline.json  openmodelica_minimal_probe_baseline.md
benchmarks/: agent_modelica_electrical_tasks_v0.json  agent_modelica_hardpack_aix_v1.json  agent_modelica_hardpack_v1.json  agent_modelica_hardpack_v1.md  agent_modelica_hardpack_v1.public_template.json  agent_modelica_mutant_recipe_lock_v1.json  agent_modelica_mvp_challenge_v1.json  agent_modelica_mvp_repair_v1.json  agent_modelica_mvp_repair_v1.public_template.json  agent_modelica_problem_quota_v1.json  agent_modelica_problem_taxonomy_v1.json  medium_pack_v1.json  pack_v0.json
core/: AGENT_MODELICA_OMC_ADAPTER_CONTRACT_V0.md
data/: agent_modelica_benchmark_variance_spec_template_v1.json  agent_modelica_cross_domain_track_manifest_v1.json  agent_modelica_cross_domain_validation_spec_template_v1.json  agent_modelica_difficulty_layer_spec_v1.json  agent_modelica_expected_layer_hint_rules_v1.json  (+4 more)
docs/: legacy-demo.md
(+3623 files in other folders)
