[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateforge"
version = "0.1.0"
description = "Minimal CI/regression governance skeleton for simulation changes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["gateforge*"]
